# used-car-scraper

./: .gitignore  README.md  pyproject.toml  test.xls
src/used_cars/: cars_scraper.py
used_cars/: aggregator.py  dataset.py  job.py  scraper.py  url_builder.py
